--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Welcome to my world of rails and ruby fun!</h1>
+<h1>Welcome to the UberRails Installer Demo!!!</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
